bynkc/tests/fixtures/negative/366_generic_uninferable_construction/input.bynk
commons bad

type Holder[T] = { slot: Option[T] }

fn f() -> Int {
  let h = Holder { slot: None }
  0
}
